# daily-digest

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  RETRO_1.md  REVIEW.md  alembic.ini  backend.Dockerfile  design-document.rst  docker-compose.yml  issues.sh  loop-dev.txt  loop_invoke.txt  prompt-template.txt  pyproject.toml  vulture_whitelist.py
.beads/: .gitignore  metadata.json
.beads/hooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/workflows/: quality-gate.yml
alembic/: env.py
alembic/versions/: 082b6a79172b_initial_schema.py  0d252c912e68_v2_schema_with_context_window.py  90b308aa6b1b_add_comments_to_all_tables_and_columns.py
config/: personas.yml  phases.yml  pipeline.yml  prompts.yml  scoring.yml  workstreams.yml
data/: demo_messages.json  slack_messages.json  step2_raw_atoms.json  step4_filtered_atoms.json
docs/: Makefile  conf.py  design-document.rst  index.rst  next-steps.rst  presentation-guide.rst  presentation.rst  quickstart.rst
docs/api/: digest.config.rst  digest.context.rst  digest.dataset.rst  digest.db.rst  digest.extraction.rst  digest.generation.rst  digest.graph.rst  digest.ingestion.rst  digest.llm.rst  digest.models.rst  digest.rst  digest.scoring.rst  evercurrent.app.rst  evercurrent.config.loader.rst  evercurrent.config.rst  evercurrent.context.personas.rst  evercurrent.context.phases.rst  evercurrent.context.roster.rst  evercurrent.context.rst  evercurrent.context.workstreams.rst  evercurrent.dataset.messages.rst  evercurrent.dataset.rst  evercurrent.dataset.schema.rst  evercurrent.db.rst  evercurrent.extraction.filter.rst  evercurrent.extraction.prompt.rst  evercurrent.extraction.rst  evercurrent.extraction.runner.rst  evercurrent.extraction.validation.rst  evercurrent.fixtures.rst  evercurrent.generation.assembler.rst  evercurrent.generation.prompt.rst  evercurrent.generation.rst  evercurrent.generation.runner.rst  evercurrent.graph.rst  evercurrent.ingestion.context_window.rst  evercurrent.ingestion.continuations.rst  evercurrent.ingestion.loader.rst  evercurrent.ingestion.rst  (+20 more)
frontend/: Dockerfile  nginx.conf  package-lock.json
scripts/: quality-gates.sh  run-all-pipelines.sh  smoke-test.sh  smoke_test_runner.py
tests/: __init__.py  conftest.py  test_app.py  test_endpoints.py  test_env_sample.py  test_fixtures.py  test_pipeline.py
(+224 files in other folders)
