[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evercurrent"
version = "0.1.0"
description = "Context-aware Slack daily digest for robotics hardware teams"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.49",
    "pydantic>=2.0",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
    "radon>=6.0",
    "ty>=0.0.1a7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evercurrent"]
